Fixed header and login structure

--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -20,3 +20,7 @@
     color: grey !important;
     background-color: white !important;
 }
+
+.submit-button {
+    background-color: #ff2700 !important;
+}
