--- a/stou_cook_frontend/src/components/Register/RegistrationForm.css
+++ b/stou_cook_frontend/src/components/Register/RegistrationForm.css
@@ -15,12 +15,12 @@
   justify-content: left;
   align-items: center;
   height: 33px;
-  background-color: #337ab7;
+  background-color: #ff2700;
   color: #ffffff;
   padding-left: 22px;
 }
 .sb-btn{
-  background-color: #337ab7;
+  background-color: #ff2700;
   color: #ffffff;
   width: 90px;
   height: 30px;
