--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -25,6 +25,34 @@
     background-color: #ff2700 !important;
 }
 
+.checkbox-div {
+    align-content: left !important;
+    display: inline-block;
+}
+
+.addfood-container {
+    padding: 50px 50px;
+    border: 1px solid rgb(202, 202, 202);
+    width: 50%;
+    margin-top: 2%;
+}
+
+.outer-container {
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.image-upload-input {
+    visibility: hidden;
+}
+
+.image-upload-preview {
+    cursor: pointer;
+    max-width: 15rem;
+}
+
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
