--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -102,7 +102,6 @@
 
 .filterbar-container {
     width: 25%;
-    margin: 2% 2%;
     padding: 2% 2%;
 }
 
@@ -142,4 +141,61 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
+}
+
+.ViewFoodOptions {
+    border-radius: 3px;
+    max-width: 65%;
+    margin-right: 20%;
+  }
+
+.food-option {
+    height: 8rem;
+}
+
+  .vfo-image {
+    max-width: 100%;
+    max-height: 100px;  
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 0px;
+  }
+  .vfo-description {
+    /* display: block; */
+    color: rgba(111, 95, 95, 0.67);
+    font-size: 0.75em;
+    margin-top: -9%;
+  }
+  
+  .vfo-foodname {
+    padding-top: 5px;
+    font-weight: bold;
+  }
+
+  .vfo-chefname {
+    line-height: 100%;
+  }
+  
+  .vfo-price {
+    float: right;
+    font-weight: bold;
+    font-size: 0.90em;
+    margin-left: 50%;
+    padding-top: 5px;
+  }
+
+.food-option-inner {
+    display: flex;
+    flex-direction: row;
+}
+
+.vfo-info {
+    text-align: left;
+    margin-left: 4%;
+}
+
+  .home {
+    display: flex;
+    flex-direction: row;
+    margin: 2% 2%;
 }
