--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -66,6 +66,46 @@
     width: 400px;
 }
 
+.filterbar-container {
+    width: 25%;
+    padding: 2% 2%;
+}
+
+.basic-horizontal-div {
+    display: flex;
+    flex-direction: row;
+}
+
+.checkbox-div {
+    max-width: 100%;
+}
+
+.single-checkbox-div {
+    margin: 5px 5px;
+}
+
+.single-checkbox {
+    background-color: #ffffff;
+    border-color: #ff2700;
+    color: #ff2700;
+}
+
+.single-checkbox.active {
+    background-color: #ff2700 !important;
+    border-color: #ff2700 !important;
+}
+
+.single-checkbox:active {
+    background-color: #ff2700 !important;
+    color: #ff2700;
+    border-color: #ff2700;
+}
+
+.single-checkbox:hover {
+    background-color: #ff2700 !important;
+    border-color: #ff2700;
+}
+
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
