--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -106,7 +106,7 @@
 }
 
 .filterbar-container {
-    width: 30%;
+    width: 40%;
     padding: 2% 2%;
 }
 
@@ -219,6 +219,19 @@
   display: flex;
   flex-direction: row;
   margin: 2% 2%;
+}
+
+.homecook-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
+
+.homecook-card {
+  width: 15rem !important;
+  margin: 10px auto;
 }
 
 @media all and (min-width: 480px) {
