--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -143,6 +143,20 @@
     }
 }
 
+.saveHeart {
+  float: right;
+  margin: 10px;
+  color: gray;
+    display: none;
+}
+
+.saveOpenHeart {
+  float: right;
+  margin: 10px;
+  color: gray;
+
+}
+
 #profile-container {
     width: 150px;
     height: 150px;
