--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -146,15 +146,13 @@
 .saveHeart {
   float: right;
   margin: 10px;
-  color: gray;
-    display: none;
+  color: red;
 }
 
 .saveOpenHeart {
   float: right;
   margin: 10px;
-  color: gray;
-
+  color: red;
 }
 
 #profile-container {
