--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -185,9 +185,9 @@ textarea {
 }
 
   .vfo-image {
-    max-width: 100%;
-    max-height: 100px;  
-    min-width: 100px;
+    width: 6.5rem;
+    height: 6.5rem;
+    object-fit: cover;
     /* padding-top: 5px; */
     /* padding-bottom: 5px; */
     /* padding-right: 0px; */
