--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -138,6 +138,19 @@ textarea {
     margin-top: 10px;
 }
 
+.quantity-input {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.quantity-input-div {
+  width: 110px !important;
+  margin: 0;
+  padding: 0;
+  margin-right: 20px !important;
+}
+
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
