--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -126,6 +126,16 @@
   margin-bottom: 30px;
 }
 
+.order-item-info {
+  display: flex;
+  flex-direction: row;
+}
+
+.order-item-quantity {
+  margin-left: auto;
+  margin-right: 70%;
+}
+
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
@@ -241,7 +251,7 @@
     font-size: 0.90em;
   }
 
-  .online-status-position {
+.online-status-position {
     float: right;
-  }
+}
 
