--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -166,6 +166,38 @@ margin: 0 10px;
 align-self: center;
 }
 
+.order-tooltip {
+  padding: 2%;
+  padding-right: 7.5rem;
+  visibility: visible;
+  min-width: 200px;
+  max-width: 400px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  align-self: center;
+}
+
+.order-tooltip-outer {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  justify-content: center;
+  opacity: 0.9;
+  max-width: 500px;
+}
+
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  align-self: center;
+}
+
 @media all and (min-width: 480px) {
   .Login {
     padding: 60px 0;
