--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -154,11 +154,18 @@ align-self: center;
 overflow-y: scroll;
 }
 
-.button-div {
+.order-item-button-div {
 display: flex;
 flex-direction: row;
 align-self: center;
 justify-content: center;
+margin-left: auto;
+}
+
+.order-item-info {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 }
 
 .margined-buttons {
@@ -196,6 +203,11 @@ align-self: center;
   border-right: 10px solid transparent;
   border-top: 10px solid black;
   align-self: center;
+}
+
+.order-item-div {
+  display: flex;
+  flex-direction: row;
 }
 
 @media all and (min-width: 480px) {
