--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -210,6 +210,44 @@ align-self: center;
   flex-direction: row;
 }
 
+.custom-control-input.is-invalid:checked~.custom-control-label::before, .was-validated .custom-control-input:invalid:checked~.custom-control-label::before {
+  border-color: white;
+  background-color: #fec0ae;
+}
+
+.online-status-label > p {
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+  color: white;
+}
+
+.cook-home-image {
+  height: 500px;
+}
+
+.bag-itemlist-container {
+  margin-top: 50px;
+}
+
+.bag-item-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.bag-item-price {
+  width: 40px;
+  margin-left: auto;
+  font-size: 15px;
+}
+
+.bag-item-quantity {
+  margin-right: 15px;
+}
+
+.bag-item-name {
+  width: 100%;
+}
+
 @media all and (min-width: 480px) {
   .Login {
     padding: 60px 0;
