--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -371,6 +371,95 @@ textarea {
   margin-top: 50px;
 }
 
+.order-item-info {
+  display: flex;
+  flex-direction: row;
+  }
+  
+  .order-item-quantity {
+  margin-left: auto;
+  margin-right: 70%;
+  }
+  
+  .orders-type-tabs {
+  margin: 3rem 0;
+  }
+  
+  .orders-container {
+  display: flex;
+  flex-direction: column;
+  flex-flow: center;
+  justify-content: center;
+  }
+  
+  .orders-list {
+  width: 70%;
+  max-height: 500px;
+  align-self: center;
+  overflow-y: scroll;
+  }
+  
+  .order-item-button-div {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-content: center;
+  margin-left: auto;
+  }
+  
+  .order-item-info {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+  
+  .margined-buttons {
+  margin: 0 10px;
+  align-self: center;
+  }
+  
+  .order-tooltip {
+    padding: 2%;
+    padding-right: 7.5rem;
+    visibility: visible;
+    min-width: 200px;
+    max-width: 400px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    align-self: center;
+  }
+  
+  .order-tooltip-outer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    justify-content: center;
+    opacity: 0.9;
+    max-width: 500px;
+  }
+  
+  .arrow-down {
+    width: 0; 
+    height: 0; 
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid black;
+    align-self: center;
+  }
+  
+  .order-item-div {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .paypal-button-div {
+    justify-content: center;
+    display: flex;
+  }
+
 @media all and (min-width: 480px) {
     .Register {
       border: 1px solid rgb(202, 202, 202);
