--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -542,11 +542,41 @@ textarea {
   flex-direction: row;
   overflow-x: scroll;
   margin-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .recent-order {
   margin: 2rem;
   padding: 10px;
+  width: fit-content !important;
+}
+
+.order-item-holder {
+  display: flex;
+  flex-direction: row;
+}
+
+.order-item-image {
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+}
+
+.rate-orders-heading {
+  margin-top: 15px;
+  font-size: 20px;
+}
+
+.rate-submit-div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.rate-submit {
+  width: 100%;
+  align-self: center;
 }
 
 @media all and (min-width: 480px) {
