--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -415,3 +415,15 @@ align-self: center;
     margin-left: 4%;
     width: 80%;
   }
+
+  .request-button {
+  float: right;
+
+  }
+
+  .request_texts {
+  display: inline-block;
+  float: left;
+  text-align: left;
+  }
+
