--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -589,3 +589,14 @@ textarea {
 .hidden { 
   display:none; 
 }
+
+.request-button {
+  float: right;
+
+}
+
+.request_texts {
+  display: inline-block;
+  float: left;
+  text-align: left;
+}
