--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -1,3 +1,7 @@
+body, .modal-content {
+  background-color: #f7fbfc;
+}
+
 .master-container {
   min-height: 100vh;
 }
@@ -132,7 +136,7 @@ textarea {
     width: 600px;
     border: 1px solid rgb(202, 202, 202);
     padding: 60px;
-    background-color:#f7fbfc;
+    background-color: white;
 }
 .text-about-me-label {
   /* width: 400px; */
@@ -413,6 +417,7 @@ textarea {
   border: solid lightgray 0.5px;
   border-radius: 1%;
   padding: 2%;
+  background-color: white;
 }
 
 .input-row {
