rating working fully

--- a/stou_cook_frontend/src/styles/Main.css
+++ b/stou_cook_frontend/src/styles/Main.css
@@ -264,6 +264,35 @@ align-self: center;
   width: 50%;
 }
 
+.rating-modal-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center !important;
+  margin-bottom: 15px;
+}
+
+.custom-rating {
+  width: fit-content;
+  align-self: center;
+}
+
+.rate-orders-heading {
+  margin-top: 15px;
+  font-size: 20px;
+}
+
+.rate-submit-div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.rate-submit {
+  width: 100%;
+  align-self: center;
+}
+
 @media all and (min-width: 480px) {
   .Login {
     padding: 60px 0;
