--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -251,8 +251,7 @@ textarea {
 
 .food-option-view-menu-top {
   height: 8rem;
-  /* box-shadow: radial-gradient( #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-                radial-gradient( #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%); */
+  box-shadow: 0px 0px 5px 2px orange;
   
 }
 
@@ -320,6 +319,23 @@ textarea {
     text-align: left;
     margin-left: 4%;
     width: 80%;
+}
+
+.vfo-info-modal {
+  text-align: left;
+  margin-left: 4%;
+  width: 200px;
+}
+
+.fire-icon {
+  color: orange;
+  width: 25px;
+  height: 25px;
+}
+
+.fire-text {
+  display: flex;
+  line-height: 1.8;
 }
 
 .review-info {
