--- a/stou_customer_frontend/src/styles/Main.css
+++ b/stou_customer_frontend/src/styles/Main.css
@@ -200,9 +200,11 @@ textarea {
 
 @media all and (min-width: 480px) {
     .Login {
-      padding: 60px 0;
+      padding: 40px 0;
       border: 1px solid rgb(202, 202, 202);
+      border-radius: 5px;
       width: 450px;
+      margin-top: 5rem;
     }
   
     .Login form {
@@ -703,16 +705,23 @@ textarea {
   width: 30px;
 }
 
+.logo-image {
+  width: 7rem;
+  margin-bottom: 2rem;
+}
+
 @media all and (min-width: 480px) {
     .Register {
+      padding: 60px 0;
       border: 1px solid rgb(202, 202, 202);
+      border-radius: 5px;
       width: 450px;
+      margin-top: 2px;
+      
     }
     .form {
       margin: 0 auto;
       max-width: 320px;
-      padding-top: 60px;
-      padding-bottom: 50px;
     }
     
     .title {
